--- a/argo-cd-apps/app-of-apps/all-applications.yaml
+++ b/argo-cd-apps/app-of-apps/all-applications.yaml
@@ -11,8 +11,8 @@ spec:
 
   source:
     path: argo-cd-apps/overlays/staging
-    repoURL: https://github.com/redhat-appstudio/infra-deployments.git
-    targetRevision: main
+    repoURL: https://github.com/matousjobanek/infra-deployments.git
+    targetRevision: hash
 
   destination:
     namespace: openshift-gitops
