--- a/argo-cd-apps/overlays/development/repo-overlay.yaml
+++ b/argo-cd-apps/overlays/development/repo-overlay.yaml
@@ -5,20 +5,20 @@ metadata:
   name: authorization-in-kcp
 spec:
   generators:
-  - matrix:
-      generators:
-      - list:
-          elements:
-          - kcp-name: dev
-      - list:
-          elements:
-          - service: appstudio
-          - service: hacbs
+    - matrix:
+        generators:
+          - list:
+              elements:
+                - kcp-name: dev
+          - list:
+              elements:
+                - service: appstudio
+                - service: hacbs
   template:
     spec:
       source:
-        repoURL: https://github.com/redhat-appstudio/infra-deployments.git
-        targetRevision: main
+        repoURL: https://github.com/matousjobanek/infra-deployments.git
+        targetRevision: preview-everyone-bind-apiexports
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
@@ -32,8 +32,8 @@ spec:
   template:
     spec:
       source:
-        repoURL: https://github.com/redhat-appstudio/infra-deployments.git
-        targetRevision: main
+        repoURL: https://github.com/matousjobanek/infra-deployments.git
+        targetRevision: preview-everyone-bind-apiexports
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
@@ -47,9 +47,8 @@ spec:
   template:
     spec:
       source:
-        repoURL: https://github.com/redhat-appstudio/infra-deployments.git
-        targetRevision: main
-
+        repoURL: https://github.com/matousjobanek/infra-deployments.git
+        targetRevision: preview-everyone-bind-apiexports
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -57,5 +56,5 @@ metadata:
   name: spi-vault
 spec:
   source:
-    repoURL: https://github.com/redhat-appstudio/infra-deployments.git
-    targetRevision: main
+    repoURL: https://github.com/matousjobanek/infra-deployments.git
+    targetRevision: preview-everyone-bind-apiexports
