--- a/argo-cd-apps/base/kustomization.yaml
+++ b/argo-cd-apps/base/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
 - kcp-syncer.yaml
 - monitoring-workload-in-cluster.yaml
 - build-templates.yaml
+- clusterworkspacetypes.yaml
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
