--- a/components/hacbs/integration-service/overlays/dev/apiexport.yaml
+++ b/components/hacbs/integration-service/overlays/dev/apiexport.yaml
@@ -9,26 +9,26 @@ spec:
   - md5-bdbd79111419cb45ed5f46c858d8ff96.integrationtestscenarios.appstudio.redhat.com
   permissionClaims:
   - group: tekton.dev
-    identityHash: pipeline-service
+    identityHash: 9b3efeb93fd600216bc25d7b930f01903bf4f82121bdaf76b9ffeef33ca7a700
     resource: pipelineruns
   - group: appstudio.redhat.com
-    identityHash: application-api
+    identityHash: b39ff97c4b9d8e6df33e5904387696cde2ede311ecfa641a18d1cfede9aba9ce
     resource: applications
   - group: appstudio.redhat.com
-    identityHash: application-api
+    identityHash: b39ff97c4b9d8e6df33e5904387696cde2ede311ecfa641a18d1cfede9aba9ce
     resource: components
   - group: appstudio.redhat.com
-    identityHash: application-api
+    identityHash: b39ff97c4b9d8e6df33e5904387696cde2ede311ecfa641a18d1cfede9aba9ce
     resource: applicationsnapshots
   - group: appstudio.redhat.com
-    identityHash: application-api
+    identityHash: b39ff97c4b9d8e6df33e5904387696cde2ede311ecfa641a18d1cfede9aba9ce
     resource: environments
   - group: appstudio.redhat.com
-    identityHash: application-api
+    identityHash: b39ff97c4b9d8e6df33e5904387696cde2ede311ecfa641a18d1cfede9aba9ce
     resource: applicationsnapshotenvironmentbindings
   - group: appstudio.redhat.com
-    identityHash: release-service
+    identityHash: 0977b046bbecbb6158e37db008f92c3a56b365ac55288f69279ed5e108166e09
     resource: releases
   - group: appstudio.redhat.com
-    identityHash: release-service
+    identityHash: 0977b046bbecbb6158e37db008f92c3a56b365ac55288f69279ed5e108166e09
     resource: releaseplans
