--- a/components/build-service/overlays/dev/apiexport.yaml
+++ b/components/build-service/overlays/dev/apiexport.yaml
@@ -17,14 +17,14 @@ spec:
   - group: ""
     resource: serviceaccounts
   - group: tekton.dev
-    identityHash: pipeline-service
+    identityHash: 9470e11f0649510fecf40795ca21931ffcccdec85904a0a5063afecd07cf0b58
     resource: pipelineruns
   - group: appstudio.redhat.com
-    identityHash: application-api
+    identityHash: c0ab11d82d7645f199e1dce4be9e6cbac9f5fa16db2a3c9b9ba7f46a996306c1
     resource: components
   - group: appstudio.redhat.com
-    identityHash: application-api
+    identityHash: c0ab11d82d7645f199e1dce4be9e6cbac9f5fa16db2a3c9b9ba7f46a996306c1
     resource: applications
   - group: appstudio.redhat.com
-    identityHash: application-api
+    identityHash: c0ab11d82d7645f199e1dce4be9e6cbac9f5fa16db2a3c9b9ba7f46a996306c1
     resource: applicationsnapshots
