--- a/components/hacbs/jvm-build-service/overlays/dev/apiexport.yaml
+++ b/components/hacbs/jvm-build-service/overlays/dev/apiexport.yaml
@@ -24,5 +24,5 @@ spec:
   - group: ""
     resource: resourcequotas
   - group: tekton.dev
-    identityHash: pipeline-service
+    identityHash: 9470e11f0649510fecf40795ca21931ffcccdec85904a0a5063afecd07cf0b58
     resource: pipelineruns
